--- a/style.css
+++ b/style.css
@@ -1,16 +1,39 @@
 body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: lightgray;
-            padding: 20px;
-        }
-        h1 {
-            margin: 0;
-        }
-        nav ul {
-            list-style: none;
-            margin: 0;
-        }
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    background-color: burlywood;
+    padding: 20px;
+}
+
+h1 {
+    margin: 0;
+}
+
+nav ul {
+    list-style: none;
+    margin: 0;
+}
+
+.title-nama {
+    color: aqua;
+}
+
+.title-tentangsaya {
+    color: coral;
+}
+
+.title-kemampuan {
+    color: brown;
+}
+
+.title-hobi {
+    color: darkmagenta;
+}
+
+p {
+    background-color: aqua;
+}
